Fix block alignment with Large Image block

--- a/assets/js/blocks/product-gallery/inner-blocks/product-gallery-large-image/style.scss
+++ b/assets/js/blocks/product-gallery/inner-blocks/product-gallery-large-image/style.scss
@@ -7,7 +7,6 @@
 	}
 
 	.wc-block-product-gallery-large-image__inner-blocks {
-		position: absolute;
 		z-index: 1;
 		width: 100%;
 		height: 100%;
